<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/quizfeild"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quizField">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:textSize="28sp"
        android:textColor="#2ec4b6"
        android:id="@+id/userName"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/userName"
        android:layout_marginTop="150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:id="@+id/answersgrp"
        android:clickable="true"
        android:layout_centerVertical="true">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option1"
            android:id="@+id/optionButton1"
            android:checked="false"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option2"
            android:id="@+id/optionButton2"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option3"
            android:id="@+id/optionButton3"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Option4"
            android:id="@+id/optionButton4"
            android:checked="false" />

    </RadioGroup>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answersgrp"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#e63946"
        android:text="@string/Button1"
        app:layout_constraintBottom_toTopOf="@+id/quitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#1d3557"
        android:text="@string/Button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answersgrp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:text="@string/question"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/answersgrp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/score"
        android:id="@+id/textView3"
        android:textColor="#000000"
        android:textSize="19sp"
     />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:text="@string/score1"
        android:textColor="#000000"
        android:textSize="19sp" />

</androidx.constraintlayout.widget.ConstraintLayout>