<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about">

    <TextView
        android:id="@+id/Developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="104dp"
        android:text="@string/Developers"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/devimg1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="230dp"
        android:layout_marginStart="20dp"
        android:id="@+id/prof"
        />

    <TextView
        android:id="@+id/dev1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="240dp"
        android:text="@string/dev1"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/prof"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dev2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="158dp"
        android:text="@string/dev2"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/prof"
        app:layout_constraintTop_toTopOf="@id/dev1" />
    <TextView
        android:id="@+id/email2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:text="@string/email1"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/prof"
        app:layout_constraintTop_toTopOf="@id/dev1" />

    <TextView
        android:id="@+id/email1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:text="@string/email2"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/prof"
        app:layout_constraintTop_toTopOf="@id/dev2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/devimg2"
        app:layout_constraintTop_toBottomOf="@id/prof"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:id="@+id/prof1"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/BackBtn"
        android:textSize="25sp"
        android:id="@+id/bckBtn"
        android:backgroundTint="#023e8a"
        />

</androidx.constraintlayout.widget.ConstraintLayout>