<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quiz"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="40dp"
        android:id="@+id/Heading"
        android:text="@string/heading"
        android:textColor="#db222a"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameEntry"
        app:layout_constraintTop_toBottomOf="@id/Heading"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="150dp"
        android:hint="@string/name"
        android:textSize="20sp"
        android:textColorHint="@color/black"
        android:autofillHints="name"
        android:textColor="#ff4d6d"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameEntry"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="150dp"
        android:id="@+id/StartButton"
        android:text="@string/startButton"
        android:textSize="18sp"
        android:backgroundTint="#dc2f02"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/StartButton"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:id="@+id/AboutButton"
        android:text="@string/aboutButton"
        android:textSize="18sp"
        android:backgroundTint="#023e8a"
        />

</androidx.constraintlayout.widget.ConstraintLayout>